Decrease logotext spacing, minor Hamilton fixup

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,10 @@ h1, h2, h3, h4 {
     font-family: 'Inconsolata', sans-serif;
 }
 
+h1.hoyahacks {
+    word-spacing: -10px;
+}
+
 body {
     font-size: 18px;
 }
